<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>ehealth_connector-codegenerator-gen</artifactId>
	<name>eHealth Connector module Code Generator Generic</name>
	<description>Country independent stuff for code generation</description>

	<parent>
		<groupId>org.ehealth_connector.codegenerator</groupId>
		<artifactId>ehealth_connector-codegenerator</artifactId>
		<version>1.9-SNAPSHOT</version>
	</parent>

	<dependencies>

		<dependency>
			<groupId>org.ehealth_connector.common</groupId>
			<artifactId>ehealth_connector-common-gen</artifactId>
		</dependency>
		<dependency>
			<groupId>org.ehealth_connector.valueset</groupId>
			<artifactId>ehealth_connector-valueset-gen</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
		</dependency>
		<dependency>
			<groupId>net.sf.saxon</groupId>
			<artifactId>Saxon-HE</artifactId>
		</dependency>

		<!-- stuff used by code generator, only (do not move this in the main api pom) -->
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.7.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-symbol-solver-core</artifactId>
			<version>3.14.5</version>
		</dependency>

		<!-- stuff for code formatting tests (backup for later use, only) <dependency> <groupId>org.eclipse.platform</groupId> <artifactId>org.eclipse.equinox.common</artifactId> 
			<version>3.10.400</version> </dependency> <dependency> <groupId>org.eclipse.jdt</groupId> <artifactId>org.eclipse.jdt.core</artifactId> <version>3.18.0</version> 
			</dependency> <dependency> <groupId>org.eclipse.platform</groupId> <artifactId>org.eclipse.core.runtime</artifactId> <version>3.15.300</version> </dependency> 
			<dependency> <groupId>org.eclipse.platform</groupId> <artifactId>org.eclipse.core.resources</artifactId> <version>3.13.400</version> </dependency> <dependency> 
			<groupId>org.eclipse.platform</groupId> <artifactId>org.eclipse.text</artifactId> <version>3.8.200</version> </dependency> -->

		<!-- test stuff -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<mainClass>org.ehealth_connector.codegenerator.valuesets.UpdateValueSets</mainClass>
					<executable>java</executable>
					<workingDirectory>.</workingDirectory>
					<arguments>
						<argument>-classpath</argument>
						<!-- automatically creates the classpath using all project dependencies, also adding the project build directory -->
					</arguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version><!--$NO-MVN-MAN-VER$-->
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${project.build.directory}/generated-sources/antlr4/</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.7.1</version>
				<configuration>
					<outputDirectory>${project.build.directory}/generated-sources/antlr4/org/ehealth_connector/codegenerator/cda/antlr/</outputDirectory>
					<sourceDirectory>${basedir}/src/main/resources/antlr4</sourceDirectory>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>16</source>
					<target>16</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
